--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
                                 <div class="row">
                                     <div class="col col-10 display--desktop-only">
                                         <div class="vertical-center">
-                                            <span class='display--desktop-only'>Nome Sobrenome</span>
+                                            <span class='display--desktop-only'>Rodolpho Narciso</span>
                                         </div>
                                     </div>
                                     <div class="col col-2">
@@ -81,33 +81,13 @@
                     </div>
                 </div>
             </nav>
-            <nav class='nav nav--style-blue nav--priority-secondary'>
-                <div class="row">
-                    <div class="container">
-                        <div class="col col-sm-4 col-2">
-                            <div class='nav-item nav-item--align-left'>
-                                Minha conta
-                            </div>
-                        </div>
-                        <div class="col col-2 display--desktop-only">
-                            <div class='nav-item nav-item--align-left'>
-                                Pré-Matrículas
-                            </div>
-                        </div>
-                        <div class="col col-2 display--desktop-only">
-                            <div class='nav-item nav-item--align-left'>
-                                Bolsas Favoritas
-                            </div>
-                        </div>
-                        <div class="col col-sm-4 display--mobile-only"></div>
-                        <div class="col col-sm-4 col-2 display--mobile-only">
-                            <div class='nav-item nav-item--align-right'>
-                                Menu
-                                <i class="fas fa-chevron-down"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <nav class="menu">
+                <ul class="menu__itens" id="nav-menu">
+                    <li class="menu__title menu__title--login"><a href="#">Minha conta</a></li>
+                    <li class="menu__title"><a href="#">Pré-matrículas</a></li>
+                    <li class="menu__title menu__title--active"><a href="#">Bolsas Favoritas</a></li>
+                    <li class="menu__title menu__icon"><a href="javascript:void(0);" onclick="showMenu()">Menu <i class="fas fa-angle-down"></i></a></li>
+                </ul>
             </nav>
         </header>
         
